--- a/css/pet-category.css
+++ b/css/pet-category.css
@@ -8,6 +8,7 @@ body {
 a {
     text-decoration: none;
 }
+
 .loading-overlay {
     display: flex;
     justify-content: center;
@@ -22,7 +23,8 @@ a {
 }
 
 .loading-gif {
-    width: 300px; /* Adjust the width as needed */
+    width: 300px;
+    /* Adjust the width as needed */
     height: auto;
 }
 
@@ -335,6 +337,7 @@ input[type="checkbox"]:checked:after {
     cursor: pointer;
     /* appearance: none; */
 }
+
 .sort-options .sort-select option {
     background-color: #fff;
 }
@@ -361,12 +364,21 @@ input[type="checkbox"]:checked:after {
     justify-self: center;
 }
 
+.product:hover {
+    box-shadow: 4.88px 4.88px 6.88px 0px rgba(0, 0, 0, 0.5);
+    background-color: #f14000;
+}
+
 .product .product-image {
     width: 100%;
     height: 65%;
     border-radius: 19.2px;
     background: #fff;
 }
+
+/* .product:hover .product-image {
+    transform: scale(0.9);
+} */
 
 .product .product-image .star-and-bag_plus {
     display: grid;
@@ -422,6 +434,7 @@ input[type="checkbox"]:checked:after {
     width: auto;
     transform: translateY(-10%);
 }
+
 
 .product .product-information {
     float: left;
